# web/references/swagger.json
@@ -528,17 +528,17 @@
             "content": {
               "text/plain": {
                 "schema": {
-                  "$ref": "#/components/schemas/TodoItemDTO"
+                  "$ref": "#/components/schemas/TodoItemResponse"
                 }
               },
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/TodoItemDTO"
+                  "$ref": "#/components/schemas/TodoItemResponse"
                 }
               },
               "text/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/TodoItemDTO"
+                  "$ref": "#/components/schemas/TodoItemResponse"
                 }
               }
             }
